<resources>
    <string name="app_name">Student Loans App</string>
    <string name="unsubsidized_loan">Unsubsidized Loan</string>
    <string name="loan_summary">Loan Summary</string>
    <string name="private_loan">Private Loan</string>
    <string name="subsidized_loan">Subsidized Loan</string>
    <string name="keiserseal">Keiserseal</string>
    <string name="parent_plus_loan_2_650">Parent PLUS Loan $2,650</string>
    <string name="direct_subsidized_loan_1_000">DIRECT Subsidized Loan $1,000</string>
    <string name="loan_summary1">Loan Summary</string>
    <string name="winter_semester">Winter Semester</string>
    <string name="direct_unsubsidized_loan_2_000">DIRECT Unsubsidized Loan $2,000</string>
    <string name="_2_800">$2,800</string>
    <string name="studentimg" />
    <string name="studentLoanTextView" />
    <string name="carimg" />
    <string name="carLoanTextView" />
    <string name="cashimg" />
    <string name="personalLoanTextView" />
    <string name="welcomePhrase" />
    <string name="cashhand" />
    <string name="advisorTextView" />
    <string name="student_loan">Student Loan</string>
    <string name="car_loankei">Car Loan</string>
    <string name="begin_obtaining_loan_benefits_today">Begin obtaining loan benefits today!</string>
    <string name="personal_loans">Personal Loan</string>
    <string name="speak_with_a_financial_advisor_today">Speak with a financial advisor today</string>
    <string name="login_page">Login</string>
    <string name="email_loginpage">Email</string>
    <string name="keiser_university">Keiser University</string>
    <string name="password_loginpage">Password</string>
    <string name="forgot_email">Forgot Email?</string>
    <string name="create_account">Create account</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or login with</string>
    <string name="keiserunivlogo">Keiserunivlogo</string>
    <string name="googlelogo">googlelogo</string>
    <string name="twitterlogobutton">twitterlogobutton</string>
    <string name="fblogo">FBlogo</string>
    <string name="registration_page">Registration Page</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_registerpage">Login</string>
    <string name="email_register">Email</string>
    <string name="password_register">Password</string>
    <string name="keiser_registerseal">TODO</string>
    <string name="signup">Signup</string>
    <string name="full_name">Full Name</string>

</resources>