<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="Keiserhomepage">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="383dp"
        android:layout_height="110dp"
        android:layout_marginTop="36dp"
        android:background="#3949AB"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:elevation="1dp"
        android:text="@string/begin_obtaining_loan_benefits_today"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/cashhand"
        android:elevation="1dp"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/keiserseal"
        tools:ignore="ImageContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/personalLoanCard"
        android:layout_width="175dp"
        android:layout_height="95dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:elevation="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:onClick="personalLoanClick"
        app:cardBackgroundColor="#3949AB"
        app:cardCornerRadius="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="OnClick,UsingOnClickInXml">

        <ImageView
            android:layout_width="131dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:adjustViewBounds="false"
            android:alpha="0.4"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/cashimg"
            android:src="@drawable/cash"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/personal_loans"
            android:textColor="#FDFDFD"
            tools:ignore="TextContrastCheck" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:background="#000000"
        android:text="@string/speak_with_a_financial_advisor_today"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentLoanCard"
        tools:ignore="TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/studentLoanCard"
        android:layout_width="182dp"
        android:layout_height="108dp"
        android:layout_marginTop="16dp"
        android:focusable="true"
        android:onClick="studentLoanClick"
        app:cardBackgroundColor="#3949AB"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personalLoanCard"
        tools:ignore="OnClick,UsingOnClickInXml">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="131dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:alpha="0.4"
            android:contentDescription="@string/studentimg"
            app:srcCompat="@drawable/studentloan"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="94dp"
            android:layout_height="29dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:onClick="studentloantest"
            android:text="@string/student_loan"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/carLoanCard"
        android:layout_width="175dp"
        android:layout_height="95dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:onClick="carLoanClick"
        app:cardBackgroundColor="#3949AB"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:focusable="true"
        tools:ignore="OnClick,UsingOnClickInXml">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="131dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:alpha="0.4"
            android:contentDescription="@string/carimg"
            app:srcCompat="@drawable/carloan"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/car_loankei"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>